--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     if (self == top) {
       document.getElementsByTagName("body")[0].style.display = "block";
     } else {
-      top.location = self.location;
+      /// top.location = self.location;
     }
   </script>
   <script src="dist/bundle.js"></script>
